2010-01-26  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12688: MM relations: rollback not working / sys_history wrong (thanks to Ralf Hettinger)
	* Update #13327: Update ExtCore to version 3.0.0

2010-01-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13230: Using TYPO3_version with "xxx-dev" won't be parsed correct in EM

2010-01-20  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13270: t3lib_cache_backend_dbbackendtestcase does not reflect current db backend table definitions

2010-01-18  Benjamin Mack  <benni@typo3.org>

	* Fixed #11089: Fixing the built-in shopping basket (Thanks to Mathias Schreiber)

2010-01-17  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13093: Massuploader: Window is not closable (Thanks to Steffen Gebert)
	* Fixed bug #12742: BE-login screen: Login box with spinner becomes to small and label not centered (Thanks to Steffen Gebert)
	* Fixed bug #13167: Flash Uploader error messages should be more descriptive / Improve error handling of massuploader (Thanks to Steffen Gebert)

2010-01-17  Andreas Otto  <andreas@otto-hanika.de>

	* Fixed bug #13254: Flash Messages in wizard "create multiple pages" (Thanks to Georg Ringer)

2010-01-16  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12553: Text "A simple table with up to 8 columns" is wrong (Thanks to Georg Ringer)
	* Fixed bug #13255: Wrong text in wizard "create multiple pages" (Thanks to Georg Ringer)

2010-01-15  Francois Suter  <francois@typo3.org>

	* Fixed bug #11815: Saving translation settings in EM: strcmp() throws warning with PHP5.3 (Thanks to Steffen Gebert, Stefan Geith and Rupert Germann)

2010-01-14  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.3.1

2010-01-14  Dmitry Dulepov  <dmitry.dulepov+typo3svn@gmail.com>

	* Fixed bug #13146: Authentication Bypass in TYPO3 Core (OpenID)

2010-01-14  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12947: saveDocNew saves on top instead of after (Thanks to Steffen Gebert)
