@@ -1,3 +1,7 @@
+2010-01-27  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Fixed bug #12681: Select/Deselect all should be visible as link (Thanks to Georg Ringer)
+
 2010-01-26  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug #12688: MM relations: rollback not working / sys_history wrong (thanks to Ralf Hettinger)
